fixing the gap in the header
to do:
adjust the form in the botom of the frame

--- a/style.scss
+++ b/style.scss
@@ -265,6 +265,6 @@ footer {
         font-size: 0;
         display:inline-block;
         width: 30%;
-
+        margin-top: -4px;
     }
 }
